// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test en GifGrid Debe mostrarse correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    HunterxHunter
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Test en GifGrid Debe retornar ítems cuando se cargan imágenes con useFetch 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    HunterxHunter
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="http://cualquiercosa.com"
    />
    <GifGridItem
      id="123"
      key="123"
      title="Cualquier cosa"
      url="http://cualquiercosa.com"
    />
  </div>
</Fragment>
`;
